--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,17 @@ unfixable = []
 [tool.ruff.lint.flake8-annotations]
 allow-star-arg-any = true
 
+[tool.ruff.lint.isort]
+section-order = [
+  "future",
+  "standard-library",
+  "first-party",
+  "third-party",
+  "local-folder",
+  "dgp",
+  "ipython",
+]
+
 [tool.ruff.lint.isort.sections]
-# Put IPython into its own section.
-"IPython" = ["IPython"]
+ipython = ["IPython"]
+dgp = ["dgp"]
