--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,7 +8,7 @@ pre-commit >= 3.5.0
 pytest >= 7.4.3
 
 # linting and formatting
-ruff >= 0.3.0
+ruff >= 0.4.0
 
 # static type checking
 mypy >= 1.8.0
@@ -18,3 +18,4 @@ tqdm>=4.66
 optax>=0.1.9
 ipython>=8.22.0
 matplotlib>=3.7.0
+numpy>=1.25
