Runtime type checking with beartype.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dev = { file = ['requirements-dev.txt'] }
 [tool.setuptools.packages.find]
 where = ["src"]
 
+[tool.setuptools.package-data]
+"dgp" = ["py.typed"]
+
 [tool.mypy]
 python_version = "3.12"
 warn_return_any = true
